change the behavior of regex operator's priority, use single character instead of substring whitout operator character.